Remove -x option on raco test in .travis.yml, so that all modules are run, including those without a test submodule.

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ before_script:
 # `raco pkg install --deps search-auto anaphoric` to install any required
 # packages without it getting stuck on a confirmation prompt.
 script:
- - raco test -x -p anaphoric
+ - raco test -p anaphoric
 
 after_success:
  - raco setup --check-deps anaphoric
