--- a/.travis.yml
+++ b/.travis.yml
@@ -20,15 +20,16 @@ env:
     # Supply more than one RACKET_VERSION (as in the example below) to
     # create a Travis-CI build matrix to test against multiple Racket
     # versions.
-    - RACKET_VERSION=6.0
-    - RACKET_VERSION=6.1
-    - RACKET_VERSION=6.1.1
-    - RACKET_VERSION=6.2
-    - RACKET_VERSION=6.3
-    - RACKET_VERSION=6.4
-    - RACKET_VERSION=6.5
-    - RACKET_VERSION=6.6
-    - RACKET_VERSION=HEAD
+    - RACKET_VERSION=6.0   DEPS=false
+    - RACKET_VERSION=6.1   DEPS=false
+    - RACKET_VERSION=6.1.1 DEPS=true
+    - RACKET_VERSION=6.2   DEPS=true
+    - RACKET_VERSION=6.3   DEPS=true
+    - RACKET_VERSION=6.4   DEPS=true
+    - RACKET_VERSION=6.5   DEPS=true
+    - RACKET_VERSION=6.6   DEPS=true
+    - RACKET_VERSION=6.7   DEPS=true
+    - RACKET_VERSION=HEAD  DEPS=true
 
 matrix:
   allow_failures:
@@ -51,7 +52,7 @@ before_script:
 # packages without it getting stuck on a confirmation prompt.
 script:
  - raco test -p anaphoric
- - raco setup --check-deps anaphoric
+ - if $DEPS; then raco setup --check-pkg-deps anaphoric; fi
  - raco pkg install doc-coverage
  - raco doc-coverage anaphoric
  - raco pkg install --deps search-auto cover cover-codecov
