Fixed Travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ script:
  - if $RECENT; then raco setup --check-pkg-deps anaphoric; fi
  - raco pkg install doc-coverage
  - raco doc-coverage anaphoric
- - if $RECENT; raco pkg install --deps search-auto cover cover-codecov; fi
- - if $RECENT; raco cover -b -f codecov -d $TRAVIS_BUILD_DIR/coverage .; fi
+ - if $RECENT; then raco pkg install --deps search-auto cover cover-codecov; fi
+ - if $RECENT; then raco cover -b -f codecov -d $TRAVIS_BUILD_DIR/coverage .; fi
 
 after_success:
