--- a/.travis.yml
+++ b/.travis.yml
@@ -1,58 +1,37 @@
 language: c
-
-# Based from: https://github.com/greghendershott/travis-racket
+sudo: false
 
 env:
   global:
-    # Supply a global RACKET_DIR environment variable. This is where
-    # Racket will be installed. A good idea is to use ~/racket because
-    # that doesn't require sudo to install and is therefore compatible
-    # with Travis CI's newer container infrastructure.
+    # RACKET_DIR is an argument to install-racket.sh
     - RACKET_DIR=~/racket
+    - PATH="$RACKET_DIR/bin:$PATH"
   matrix:
-    # Supply at least one RACKET_VERSION environment variable. This is
-    # used by the install-racket.sh script (run at before_install,
-    # below) to select the version of Racket to download and install.
-    #
-    # Supply more than one RACKET_VERSION (as in the example below) to
-    # create a Travis-CI build matrix to test against multiple Racket
-    # versions.
-    - RACKET_VERSION=6.0   RECENT=false
-    - RACKET_VERSION=6.1   RECENT=false
-    - RACKET_VERSION=6.1.1 RECENT=true
-    - RACKET_VERSION=6.2   RECENT=true
-    - RACKET_VERSION=6.3   RECENT=true
-    - RACKET_VERSION=6.4   RECENT=true
-    - RACKET_VERSION=6.5   RECENT=true
-    - RACKET_VERSION=6.6   RECENT=true
-    - RACKET_VERSION=6.7   RECENT=true
-    - RACKET_VERSION=HEAD  RECENT=true
-
-matrix:
-  allow_failures:
-#   - env: RACKET_VERSION=HEAD
-  fast_finish: true
+    # RACKET_VERSION is an argument to install-racket.sh
+    - RACKET_VERSION=6.0
+    - RACKET_VERSION=6.1
+    - RACKET_VERSION=6.1.1
+    - RACKET_VERSION=6.2
+    - RACKET_VERSION=6.3
+    - RACKET_VERSION=6.4
+    - RACKET_VERSION=6.5
+    - RACKET_VERSION=6.6
+    - RACKET_VERSION=6.7
+    - RACKET_VERSION=6.8
+    - RACKET_VERSION=RELEASE
+    - RACKET_VERSION=HEAD
 
 before_install:
-- git clone https://github.com/greghendershott/travis-racket.git ~/travis-racket
-- cat ~/travis-racket/install-racket.sh | bash # pipe to bash not sh!
-- export PATH="${RACKET_DIR}/bin:${PATH}" #install-racket.sh can't set for us
+- curl -L https://raw.githubusercontent.com/greghendershott/travis-racket/master/install-racket.sh | bash
+- if test $RACKET_VERSION != 6.0 -a $RACKET_VERSION != 6.1; then raco pkg install --deps search-auto doc-coverage cover cover-codecov; fi # or cover-coveralls
 
 install:
- - raco pkg install --deps search-auto
+- raco pkg install --deps search-auto -j 2
 
-before_script:
-
-# Here supply steps such as raco make, raco test, etc.  Note that you
-# need to supply /usr/racket/bin/ -- it's not in PATH. You can run
-# `raco pkg install --deps search-auto anaphoric` to install any required
-# packages without it getting stuck on a confirmation prompt.
 script:
- - raco test -p anaphoric
- - if $RECENT; then raco setup --check-pkg-deps anaphoric; fi
- - raco pkg install doc-coverage
- - raco doc-coverage anaphoric
- - if $RECENT; then raco pkg install --deps search-auto cover cover-codecov; fi
- - if $RECENT; then raco cover -b -f codecov -d $TRAVIS_BUILD_DIR/coverage .; fi
-
-after_success:
+- raco test -x -p "$(basename "$TRAVIS_BUILD_DIR")"
+- if test $RACKET_VERSION != 6.0 -a $RACKET_VERSION != 6.1; then raco setup --check-pkg-deps --no-zo --no-launcher --no-install --no-post-install --no-docs --pkgs "$(basename "$TRAVIS_BUILD_DIR")"; fi
+- if test $RACKET_VERSION != 6.0 -a $RACKET_VERSION != 6.1; then raco doc-coverage "$(basename "$TRAVIS_BUILD_DIR")"; fi
+- if test $RACKET_VERSION != 6.0 -a $RACKET_VERSION != 6.1; then raco cover -s main -s test -s doc -f codecov -f html -d ~/coverage . || true; fi
+# TODO: add an option to cover to run the "outer" module too, not just the submodules.
+# TODO: deploy the coverage info.
