--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,6 @@ jobs:
       - name: Check documentation coverage
         run: if $COV; then raco doc-coverage "$(basename "$GITHUB_WORKSPACE")"; fi
       - name: Check code coverage
-        run: echo $CODECOV_TOKEN; if $COV; then raco cover -s main -s test -s doc -f codecov -f html -d ~/coverage . || true; fi
+        run: if $COV; then raco cover -s main -s test -s doc -f codecov -f html -d ~/coverage . || true; fi
       # TODO: add an option to cover to run the "outer" module too, not just the submodules.
       # TODO: deploy the coverage info.
