--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,11 @@ jobs:
           echo GITHUB_WORSPACE="$GITHUB_WORKSPACE"
           echo CODECOV_TOKEN="$CODECOV_TOKEN"
           echo secret="${{ secrets.CODECOV_TOKEN_SECRET }}"
-          printenv || env || set || true
+          echo FOO="$FOO"
+          echo "$FOO" | wc -c
+          echo "$CODECOV_TOKEN" | wc -c
+        env:
+          FOO: ${{ secrets.CODECOV_TOKEN_SECRET }}
       - name: Install Racket
         run: |
           export RACKET_DIR="$HOME/.racket"
