--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,3 +94,9 @@ jobs:
         run: if $COV; then raco cover -s main -s test -s doc -f codecov -f html -d ~/coverage . || true; fi
       # TODO: add an option to cover to run the "outer" module too, not just the submodules.
       # TODO: deploy the coverage info.
+  build-status-check:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: build-status-check
+        run: echo "This job depends on a successful build"
